Comento unas líneas en los ini para que no explote ini4j.
git-svn-id: https://aoxp.googlecode.com/svn/trunk@77 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/resources/Server.ini
+++ b/AO-XP Server/resources/Server.ini
@@ -112,12 +112,12 @@ RM8=INJU
 RM9=RENSOKU
 
 
-; Argentum Online - Server Side Library
+#Argentum Online - Server Side Library
 [AOSSLib]
-;;todos los directorios asumen ser subs de App.Path;;
-;directorio donde escribira el log
+#todos los directorios asumen ser subs de App.Path;;
+#directorio donde escribira el log
 logdir=logs
-;directorio charfiles usado por CAutoDeleteUsers
+#directorio charfiles usado por CAutoDeleteUsers
 chardir=charfile
 
 
@@ -140,15 +140,15 @@ IntervaloNpcAI=380
 IntervaloNpcPuedeAtacar=1600
 IntervaloTrabajo=700
 IntervaloUserPuedeAtacar=1500
-IntervaloWS=180 'Cantidad de minutos
+IntervaloWS=180 #Cantidad de minutos
 IntervaloInvocacion= 1001
 IntervaloPerdidaStaminaLluvia=9999
 IntervaloParaConexion= 3000
 IntervaloTimerExec=50
-IntervaloCerrarConexion=5 'Segundos
+IntervaloCerrarConexion=5 #Segundos
 IntervaloUserPuedeUsar=125
 IntervaloFlechasCazadores=1400
-IntervaloAutoReiniciar=100000 '-1 para deshabilitar
+IntervaloAutoReiniciar=100000 #-1 para deshabilitar
 IntervaloMagiaGolpe=1000
 IntervaloGolpeMagia=1000
 
