Implementación de AccountDAO para los .chr actuales (muy básica), cambio nombres de constantes en los archetypes para que sean constantes y no redundantes. Tests para AccountDAOIni, UserArchetype y GreedyMovementStrategy (y también fixeo esta clase).
git-svn-id: https://aoxp.googlecode.com/svn/trunk@106 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/project.properties
+++ b/AO-XP Server/project.properties
@@ -1,2 +1,3 @@
 config.path.server=resources/Server.ini
 config.path.archetype=resources/Dat/Balance.dat
+config.path.charfiles=resources/charfiles/
