MapService. Carga de mapas y su respectivo Test. Además de muchos errores ¿?
git-svn-id: https://aoxp.googlecode.com/svn/trunk@145 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/src/main/project.properties
+++ b/AO-XP Server/src/main/project.properties
@@ -1,3 +1,5 @@
 config.path.server=resources/Server.ini
 config.path.archetype=resources/Dat/Balance.dat
 config.path.charfiles=resources/charfiles/
+config.path.maps=resources/maps/
+config.maps.amount=285
