--- a/AO-XP Server/src/main/project.properties
+++ b/AO-XP Server/src/main/project.properties
@@ -1,5 +1,5 @@
 config.path.server=resources/Server.ini
 config.path.archetype=resources/Dat/Balance.dat
 config.path.charfiles=resources/charfiles/
-config.path.maps=resources/maps/
+config.path.maps=resources/Maps/
 config.maps.amount=285
