--- a/AO-XP Server/src/test/project.properties
+++ b/AO-XP Server/src/test/project.properties
@@ -1,3 +1,5 @@
 config.path.server=resources/Server.ini
 config.path.archetype=resources/Dat/Balance.dat
-config.path.charfiles=src/test/resources/charfiles/
+config.path.charfiles=resources/charfiles/
+config.path.maps=resources/Maps/
+config.maps.amount=285
