Arreglo cagadas y pelotudeces de Budi.
git-svn-id: https://aoxp.googlecode.com/svn/trunk@153 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/src/test/project.properties
+++ b/AO-XP Server/src/test/project.properties
@@ -1,5 +1,3 @@
-config.path.server=resources/Server.ini
+config.path.server=src/test/resources/Server.ini
 config.path.archetype=resources/Dat/Balance.dat
-config.path.charfiles=resources/charfiles/
-config.path.maps=resources/Maps/
-config.maps.amount=285
+config.path.charfiles=src/test/resources/charfiles/
