Vuelo los if de security enabled e integro el security manager.
git-svn-id: https://aoxp.googlecode.com/svn/trunk@182 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/.classpath
+++ b/AO-XP Server/.classpath
@@ -11,7 +11,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/aopalliance.jar"/>
 	<classpathentry kind="lib" path="lib/ini4j-0.5.1.jar"/>
-    <classpathentry kind="lib" path="lib/jakarta-oro-2.0.8.jar"/>
-    <classpathentry kind="lib" path="lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta-oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="lib/commons-validator-1.3.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/AO-XP Server Security"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
