--- a/AO-XP Server/src/test/project.properties
+++ b/AO-XP Server/src/test/project.properties
@@ -3,3 +3,4 @@ config.path.archetype=resources/Dat/Balance.dat
 config.path.charfiles=src/test/resources/charfiles/
 config.path.maps=resources/Maps/
 config.maps.amount=285
+config.security.manager=ao.security.DefaultSecurityManager
