--- a/AO-XP Server/src/main/project.properties
+++ b/AO-XP Server/src/main/project.properties
@@ -3,4 +3,4 @@ config.path.archetype=resources/Dat/Balance.dat
 config.path.charfiles=resources/charfiles/
 config.path.maps=resources/Maps/
 config.maps.amount=285
-config.security.manager=ao.security.DefaultSecurityManager
+config.security.manager=ao.security.impl.DefaultSecurityManager
