Some fixes a replace didn't cover, ignore .* files and add crossed dependency between projects.
git-svn-id: https://aoxp.googlecode.com/svn/trunk@236 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/pom.xml
+++ b/AO-XP Server/pom.xml
@@ -86,6 +86,11 @@
       <artifactId>easymockclassextension</artifactId>
       <version>2.5.2</version>
     </dependency>
+    <dependecy>
+      <groupId>com.ao</groupId>
+      <artifactId>aoxp-server-security</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependecy>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
