--- a/AO-XP Server/pom.xml
+++ b/AO-XP Server/pom.xml
@@ -86,11 +86,11 @@
       <artifactId>easymockclassextension</artifactId>
       <version>2.5.2</version>
     </dependency>
-    <dependecy>
+    <dependency>
       <groupId>com.ao</groupId>
       <artifactId>aoxp-server-security</artifactId>
       <version>1.0-SNAPSHOT</version>
-    </dependecy>
+    </dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
