Added commons-validate dependency
git-svn-id: https://aoxp.googlecode.com/svn/trunk@238 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/pom.xml
+++ b/AO-XP Server/pom.xml
@@ -87,6 +87,11 @@
       <version>2.5.2</version>
     </dependency>
     <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.ao</groupId>
       <artifactId>aoxp-server-security</artifactId>
       <version>1.0-SNAPSHOT</version>
