Updated LoginNewChar packet
git-svn-id: https://aoxp.googlecode.com/svn/trunk@242 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/src/main/resources/project.properties
+++ b/AO-XP Server/src/main/resources/project.properties
@@ -5,3 +5,4 @@ config.path.maps=resources/Maps/
 config.path.objsdat=resources/Dat/obj.dat
 config.maps.amount=285
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
+config.loginservice.initialavailableskills=10
