--- a/AO-XP Server/pom.xml
+++ b/AO-XP Server/pom.xml
@@ -92,6 +92,11 @@
       <version>1.3.1</version>
     </dependency>
     <dependency>
+      <groupId>oro</groupId>
+      <artifactId>oro</artifactId>
+      <version>2.0.8</version>
+    </dependency>
+    <dependency>
       <groupId>com.ao</groupId>
       <artifactId>aoxp-server-security</artifactId>
       <version>1.0-SNAPSHOT</version>
