Agrego un nuevo service para validar la cabeza del personaje Valido que al crear pj la cabeza sea válida
git-svn-id: https://aoxp.googlecode.com/svn/trunk@266 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/src/main/resources/project.properties
+++ b/AO-XP Server/src/main/resources/project.properties
@@ -7,3 +7,13 @@ config.maps.amount=290
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
 config.loginservice.initialavailableskills=10
 config.inventory.itemperrow=5
+config.heads.darkelf.male=201-221
+config.heads.darkelf.female=270-288
+config.heads.dwarf.male=301-319
+config.heads.dwarf.female=370-384
+config.heads.elf.male=101-122
+config.heads.elf.female=170-188
+config.heads.gnome.male=401-416
+config.heads.gnome.female=470-484
+config.heads.human.male=1-40
+config.heads.human.female=70-89
