--- a/AO-XP Server/src/main/resources/project.properties
+++ b/AO-XP Server/src/main/resources/project.properties
@@ -17,3 +17,13 @@ config.heads.gnome.male=401-416
 config.heads.gnome.female=470-484
 config.heads.human.male=1-40
 config.heads.human.female=70-89
+config.bodies.darkelf.male=3
+config.bodies.darkelf.female=3
+config.bodies.dwarf.male=300
+config.bodies.dwarf.female=300
+config.bodies.elf.male=2
+config.bodies.elf.female=2
+config.bodies.gnome.male=300
+config.bodies.gnome.female=300
+config.bodies.human.male=1
+config.bodies.human.female=1
