--- a/AO-XP Server/src/main/resources/project.properties
+++ b/AO-XP Server/src/main/resources/project.properties
@@ -4,6 +4,7 @@ config.path.charfiles=resources/charfiles/
 config.path.maps=resources/Maps/
 config.path.objsdat=resources/Dat/obj.dat
 config.maps.amount=290
+config.path.citiesdat=resources/Dat/ciudades.dat
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
 config.loginservice.initialavailableskills=10
 config.inventory.itemperrow=5
