DAO de NPCs! Comerciantes, hostiles, gobernadores, entrenadores.
git-svn-id: https://aoxp.googlecode.com/svn/trunk@287 4a1aa3fa-7d1d-11de-9afa-c7a50e5ca1b3

--- a/AO-XP Server/src/main/resources/project.properties
+++ b/AO-XP Server/src/main/resources/project.properties
@@ -3,6 +3,7 @@ config.path.archetype=resources/Dat/Balance.dat
 config.path.charfiles=resources/charfiles/
 config.path.maps=resources/Maps/
 config.path.objsdat=resources/Dat/obj.dat
+config.path.npcsdat=resources/Dat/NPCs.dat
 config.maps.amount=290
 config.path.citiesdat=resources/Dat/Ciudades.dat
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
