--- a/AO-XP Server/pom.xml
+++ b/AO-XP Server/pom.xml
@@ -77,14 +77,21 @@
       <version>0.5.1</version>
     </dependency>
     <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty</artifactId>
+      <version>3.4.1.Final</version>
+    </dependency>
+    <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
       <version>2.5.2</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymockclassextension</artifactId>
       <version>2.5.2</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>commons-validator</groupId>
