--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
       <url>http://nexus.monits.com/content/repositories/oss-releases/</url>
       <name>Monits Releases</name>
     </repository>
+    <repository>
+      <id>jboss-public</id>
+      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+      <name>JBoss Public</name>
+    </repository>
   </repositories>
 
   <build>
@@ -60,17 +65,23 @@
 
   <properties>
     <log4j.version>1.2.16</log4j.version>
-    <junit.version>4.8.1</junit.version>
-    <ini4j.version>0.5.1</ini4j.version>
-    <guice.version>2.0</guice.version>
-    <netty.version>3.4.1.Final</netty.version>
+    <junit.version>4.12</junit.version>
+    <ini4j.version>0.5.4</ini4j.version>
+    <guice.version>3.0</guice.version>
+    <netty.version>3.10.0.Final</netty.version>
     <easymock.version>2.5.2</easymock.version>
-    <commons.validator.version>1.3.1</commons.validator.version>
+    <commons.validator.version>1.4.1</commons.validator.version>
     <oro.version>2.0.8</oro.version>
+    <javax.inject.version>1.0-PFD-1</javax.inject.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>${javax.inject.version}</version>
+      </dependency>
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
