--- a/pom.xml
+++ b/pom.xml
@@ -69,10 +69,11 @@
     <ini4j.version>0.5.4</ini4j.version>
     <guice.version>3.0</guice.version>
     <netty.version>3.10.0.Final</netty.version>
-    <easymock.version>2.5.2</easymock.version>
+    <mockito.version>1.10.19</mockito.version>
     <commons.validator.version>1.4.1</commons.validator.version>
     <oro.version>2.0.8</oro.version>
     <javax.inject.version>1.0-PFD-1</javax.inject.version>
+    <hamcrest.version>2.0.0.0</hamcrest.version>
   </properties>
 
   <dependencyManagement>
@@ -99,6 +100,18 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>java-hamcrest</artifactId>
+        <version>${hamcrest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-junit</artifactId>
+        <version>${hamcrest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.ini4j</groupId>
         <artifactId>ini4j</artifactId>
         <version>${ini4j.version}</version>
@@ -114,15 +127,9 @@
         <version>${netty.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.easymock</groupId>
-        <artifactId>easymock</artifactId>
-        <version>${easymock.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.easymock</groupId>
-        <artifactId>easymockclassextension</artifactId>
-        <version>${easymock.version}</version>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
